force-app/main/default/objects/Discount_Request__c/Discount_Request__c.object-meta.xml
<CustomObject>
    <description>Stores discount request data raised by resellers for Hardware(MCPXX), Plan and Ala Carte applications</description>
    <label>Discount Request</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Discount Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>