force-app/main/default/objects/Discount_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the Account for which the discount request record is created</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Discount Requests</relationshipLabel>
    <relationshipName>Discount_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>