force-app/main/default/objects/Discount_Request__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the manager of account for which the discount request is created</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Discount_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>