force-app/main/default/objects/Discount_Request__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <description>Specifies any additional comments on discount request</description>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>