force-app/main/default/objects/Discount_Request__c/fields/Approver1_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver1_Email__c</fullName>
    <description>Stores the email of Account Manager</description>
    <formula>&apos;&apos;</formula>
    <label>Approver1 Email</label>
    <type>Text</type>
</CustomField>