force-app/main/default/objects/Discount_Request__c/fields/Approver1_Email_del__c.field-meta.xml
<CustomField>
    <fullName>Approver1_Email_del__c</fullName>
    <description>Specifies the email id of approver in first approval step</description>
    <label>Approver1 Email</label>
    <type>Email</type>
</CustomField>