force-app/main/default/objects/Discount_Request__c/fields/Approver2_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver2_1_Email__c</fullName>
    <description>Specifies the email id of approver in fourth approval step</description>
    <label>Approver2_1 Email</label>
    <type>Email</type>
</CustomField>