force-app/main/default/objects/Discount_Request__c/fields/Approver2_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver2_Email__c</fullName>
    <description>Specifies the email id of Sales Director who is an approver in second approval step</description>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver2 Email</label>
    <type>Text</type>
</CustomField>