force-app/main/default/objects/Discount_Request__c/fields/Approver3_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver3_Email__c</fullName>
    <description>Specifies the email id of approver in third approval step</description>
    <label>Approver3 Email</label>
    <type>Email</type>
</CustomField>