force-app/main/default/objects/Discount_Request__c/fields/Current_Approver_Email1__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver_Email1__c</fullName>
    <description>Specifies the email id of approver with whom the request is pending</description>
    <label>Current Approver Email1</label>
    <type>Email</type>
</CustomField>