force-app/main/default/objects/Discount_Request__c/fields/Finance_Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Finance_Group_Email__c</fullName>
    <description>Specifies the mailing list id of finance group</description>
    <label>Finance Group Email</label>
    <type>Email</type>
</CustomField>