force-app/main/default/objects/Discount_Request__c/fields/Pending_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the request is in pending approval status</description>
    <label>Pending Approval</label>
    <type>Checkbox</type>
</CustomField>