force-app/main/default/objects/Discount_Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <description>Approval Status the discount request is presently in</description>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>