force-app/main/default/objects/Discount_Request__c/fields/Request_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted_Date__c</fullName>
    <description>Date/Time at which the discount request is submitted for approval with the present approver</description>
    <label>Request Submitted Date/Time</label>
    <type>DateTime</type>
</CustomField>