force-app/main/default/objects/Discount_Request__c/fields/Requested_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Approval_Date__c</fullName>
    <description>Specifies the requested approval date for discount request</description>
    <label>Requested Approval Date</label>
    <type>Date</type>
</CustomField>