force-app/main/default/objects/Discount_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the user who requested the discount</description>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Discount_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>