force-app/main/default/objects/Discount_Request__c/fields/Require_Account_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Require_Account_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether approval from account manager is required for the discount request</description>
    <label>Require Account Manager Approval</label>
    <type>Checkbox</type>
</CustomField>