force-app/main/default/objects/Discount_Request__c/fields/Require_AlaCarte_Parallel_Approval__c.field-meta.xml
<CustomField>
    <fullName>Require_AlaCarte_Parallel_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the record should enter parallel approval step where in approval from Account Manager, Sales Director or VP of Sales is required</description>
    <label>Require AlaCarte Parallel Approval</label>
    <type>Checkbox</type>
</CustomField>