force-app/main/default/objects/Discount_Request__c/fields/Require_Plan_Parallel_Approval2__c.field-meta.xml
<CustomField>
    <fullName>Require_Plan_Parallel_Approval2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the record should enter parallel approval step where in approval from Account Manager, Sales Director or VP of Sales is required</description>
    <label>Require Plan Parallel Approval2</label>
    <type>Checkbox</type>
</CustomField>