force-app/main/default/objects/Discount_Request__c/fields/Require_Plan_Parallel_Approval__c.field-meta.xml
<CustomField>
    <fullName>Require_Plan_Parallel_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the record should enter parallel approval step where in approval from Account Manager or Sales Director is required</description>
    <label>Require Plan Parallel Approval1</label>
    <type>Checkbox</type>
</CustomField>