force-app/main/default/objects/Discount_Request__c/fields/Require_Sales_Director_Approval__c.field-meta.xml
<CustomField>
    <fullName>Require_Sales_Director_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether approval from sales director is required for the discount request</description>
    <label>Require Sales Director Approval</label>
    <type>Checkbox</type>
</CustomField>