force-app/main/default/objects/Discount_Request__c/fields/Require_VP_of_Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Require_VP_of_Finance_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether approval from VP of Finance is required for the discount request</description>
    <label>Require VP of Finance Approval</label>
    <type>Checkbox</type>
</CustomField>