force-app/main/default/objects/Discount_Request__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies Sales Director field value on account for which the discount request is created</description>
    <label>Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Discount_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>