force-app/main/default/objects/Discount_Request__c/fields/Send_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to send reminder notifications to approver with whom the request is pending</description>
    <label>Send Reminder Email</label>
    <type>Checkbox</type>
</CustomField>