force-app/main/default/objects/Discount_Request__c/recordTypes/All_Discount_Requests.recordType-meta.xml
<RecordType>
    <fullName>All_Discount_Requests</fullName>
    <active>true</active>
    <description>For all Discount Request records (except &apos;Pending Approval&apos;)</description>
    <label>All Discount Requests</label>
</RecordType>