force-app/main/default/objects/Discount_Request__c/recordTypes/Pending_Discount_Request.recordType-meta.xml
<RecordType>
    <fullName>Pending_Discount_Request</fullName>
    <active>true</active>
    <description>For all &apos;Pending Approval&apos; requests</description>
    <label>Pending Discount Request</label>
</RecordType>